Ajout de l'exercice 1

--- a/Cours/Flex-Grid/flex.html
+++ b/Cours/Flex-Grid/flex.html
@@ -26,7 +26,7 @@
             background-color: lightyellow;
         }
 
-        /* .main1 {
+        .main1 {
             display: flex;
             width: 60%;
             margin: 5%;
@@ -38,9 +38,9 @@
             width: 350;
             margin: 5%;
             padding: 0
-        } */
+        }
 
-        .main1 {display: flex;
+        /* .main1 {display: flex;
             width: 800px;
             border: 1px solid black;
         }
@@ -49,7 +49,7 @@
             display: inline-flex;
             width: 800px;
             border: 1px solid black;
-        }
+        } */
 
     </style>
 
