--- a/Exercice/4- Exercice_grid-flex/Exercice1/main.html
+++ b/Exercice/4- Exercice_grid-flex/Exercice1/main.html
@@ -3,102 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex</title>
+    <title>Exercice 1 </title>
+
 
     <style>
 
+.container {
+    margin: 5%;
+    padding: 1%;
+    border: solid black 1px;
+    background-color: rgb(184, 183, 183);
+    display: grid;
+    grid-template-areas: 
+    "para1 para1 para1 para1"
+    "para2 para2 para3 para4"
+    "para2 para2 para5 para6"
+    "para7 para7 para7 para7";
+}
 
+.para1,
+.para7 {
+    text-align: center;
+}
 
-        .a1 {
-            background-color: whitesmoke;
-        }
+.para1,
+.para2,
+.para3,
+.para4,
+.para5,
+.para6,
+.para7 {
+    background-color: white;
+    margin: 1%;
+    padding: 1%;
+}
 
-        .a2 {
-            background-color: whitesmoke;
-        }
+.para1 {
+    grid-area: para1;
+}
 
-        .a3 {
-            background-color: whitesmoke;
-        }
-
-        .a4 {
-            background-color: whitesmoke;
-        }
-
-        .a5 {
-            background-color: whitesmoke;
-        }
-
-        .main1 {
-            display: flex;
-            width: 60%;
-            margin: 5%;
-            padding: 0
-        }
-
-        .main2 {
-            display: inline-flex;
-            width: 350;
-            margin: 5%;
-            padding: 0
-        }
+.para2 {
+    grid-area: para2;
+}
+.para3 {
+    grid-area: para3;
+}
+.para4 {
+    grid-area: para4;
+}
+.para5 {
+    grid-area: para5;
+}
+.para6 {
+    grid-area: para6;
+}
+.para7 {
+    grid-area: para7;
+}
 
 
     </style>
-
 </head>
+<body>
     
-    <body>
+<div class="container">
+<p class="para1">Spiritus ipsum dolor sit amet consectetur adipisicing elit. Id, earum.</p>
+<p class="para2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex, aliquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptatem, accusamus molestiae id illum doloremque. Perferendis natus accusamus sunt corrupti.</p>
+<p class="para3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis, voluptatem?</p>
+<p class="para4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, iure?</p>
+<p class="para5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, iure!</p>
+<p class="para6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, eligendi!</p>
+<p class="para7">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, porro?</p>
+</div>
 
-        <main class="main1">
-            <article class="a1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nobis quia illum eos
-                aliquam commodi nam in, eligendi nemo dolor molestiae et, unde ipsa. In illo quasi temporibus inventore
-                adipisci!</article>
-            <article class="a2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus similique numquam
-                animi molestiae odit, sequi illum rem temporibus dicta. Delectus obcaecati quasi hic neque nihil? Numquam
-                deserunt dolore ducimus aliquid!</article>
-            <article class="a3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dolores culpa natus facilis
-                obcaecati possimus, eligendi unde minus cupiditate iure cumque expedita soluta ipsum mollitia perspiciatis
-                voluptate fugiat laborum maiores.</article>
-            <article class="a4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam veniam rerum non illo.
-                Vero, eos. Perspiciatis nemo minima amet molestias tempore earum architecto recusandae, sed adipisci et
-                sapiente facilis consequatur?</article>
-            <article class="a5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati nam fugit aut saepe
-                quidem explicabo quae, quam, cum consequatur pariatur iste consequuntur! Deleniti esse ut laboriosam quas
-                sit accusamus ducimus!</article>
-        </main>
-    
-        <main class="main2">
-            <div>
-                <article class="a1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nobis quia illum eos
-                    aliquam commodi nam in, eligendi nemo dolor molestiae et, unde ipsa. In illo quasi temporibus inventore
-                    adipisci!</article>
-                <article class="a3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nobis quia illum eos
-                    aliquam commodi nam in, eligendi nemo dolor molestiae et, unde ipsa. In illo quasi temporibus inventore
-                    adipisci!</article>
-                <article class="a5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nobis quia illum eos
-                    aliquam commodi nam in, eligendi nemo dolor molestiae et, unde ipsa. In illo quasi temporibus inventore
-                    adipisci!</article>
-            </div>
-            <div>
-                <article class="a2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus similique numquam
-                    animi molestiae odit, sequi illum rem temporibus dicta. Delectus obcaecati quasi hic neque nihil?
-                    Numquam
-                    deserunt dolore ducimus aliquid!</article>
-                <article class="a3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dolores culpa natus
-                    facilis
-                    obcaecati possimus, eligendi unde minus cupiditate iure cumque expedita soluta ipsum mollitia
-                    perspiciatis
-                    voluptate fugiat laborum maiores.</article>
-                <article class="a4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam veniam rerum non illo.
-                    Vero, eos. Perspiciatis nemo minima amet molestias tempore earum architecto recusandae, sed adipisci et
-                    sapiente facilis consequatur?</article>
-            </div>
-        </main>
-    </body>
-
-
-
-
-
+</body>
 </html>
