--- a/Exercice/4- Exercice_grid-flex/Exercice2/main.html
+++ b/Exercice/4- Exercice_grid-flex/Exercice2/main.html
@@ -11,47 +11,59 @@
 
 /* Titre */
 
+
+
 h1 {
     background-color: rgba(202, 198, 198, 0.863);
     text-align: center;
+    padding: 2%;
+}
+
+
+.main1 {
+    display: flex;
 }
 
 
 .gauche {
     color: white;
     background-color: grey;
+    justify-content: left;
     display: flex;
+    flex : 1;
     width: 20%;
-    margin: 5%;
+    margin: 1%;
     padding: 2%;
 }
 
 .milieu {
     border-color: solid black 1px;
-    display: inline-flex;
+    justify-content: center;
+    flex : 3;
     border: 1px solid black;
     width: 60%;
-    margin: 5%;
+    margin: 1%;
     padding: 2%;
 }
-
-
-
-
 
 .droite {
     color: white;
     background-color: grey;
-    display: flex;
+    justify-content: right;
+    flex : 1;
     width: 20%;
-    margin: 5%;
+    margin: 1%;
+    padding: 2%;
+}
+
+.bas {
+    background-color: rgb(223, 212, 212);
+    text-align: center;
     padding: 2%;
 }
 
 
-
-
-
+/* Page 2 */
 
 
 
@@ -59,12 +71,44 @@ h3 {
     background-color: rgba(202, 198, 198, 0.863);
     text-align: center;
     font-size: 25px;
+    padding: 2%;
 }
 
 
+.main2 {
+    display: flex;
+}
 
 
+.gauche2 {
+    color: white;
+    background-color: grey;
+    display: flex;
+    flex : 1;
+    margin: 1%;
+    padding: 2%;
+}
 
+.milieu2 {
+    border-color: solid black 1px;
+    flex : 2;
+    border: 1px solid black;
+    margin: 1%;
+    padding: 2%;
+}
+
+
+.bas2 {
+    background-color: rgb(130, 126, 126);
+    color: white;
+    text-align: center;
+    padding: 2%;
+}
+
+.marge_droite{
+    margin: 0% 50% 0% 0%; 
+
+}
 
 </style>
 
@@ -72,8 +116,10 @@ h3 {
     
 <!-- Page 1-->
 
+
 <h1>Justo Mollis Ornare Pellentesque Inceptos</h1>
 
+<div class="main1">
 <p class="gauche"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti perspiciatis labore quidem laborum accusantium, corporis maiores veritatis ipsa nulla magnam? Accusantium amet quisquam harum consequuntur consequatur repudiandae in fugit, eveniet pariatur quis est error nihil! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa hic velit iusto ad ducimus incidunt nisi! Nesciunt id a exercitationem.</p>
 
 <div class="milieu"> 
@@ -84,24 +130,26 @@ h3 {
 </div>
 
 <p class="droite">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, eum? Vitae fugit illo iste quia quos alias necessitatibus, pariatur minima culpa atque nostrum vero dignissimos sapiente. Harum a corporis consequatur, laboriosam soluta porro eligendi tenetur doloribus nemo? Repudiandae voluptatibus nesciunt voluptates ipsum quis saepe voluptas ullam debitis et? Id esse sit nihil? Porro, quos tenetur?</p>
-
+</div>
 <footer class="bas"> Lorem ipsum dolor sit amet.</footer>
 
 
 <!-- Page 2 -->
 
-
+<div class="marge_droite">
 <h3>Justo Mollis Ornare Pellentesque Inceptos</h3>
+<div class="main2">
 <p class="gauche2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam corrupti ea praesentium? Expedita sapiente vitae quo nemo rerum eaque mollitia harum nisi nam doloremque beatae, unde quaerat fugiat, aspernatur explicabo! Tempora quis non hic perferendis, dolorem soluta vero sed blanditiis cum fuga facere ab recusandae voluptatem repudiandae quia consequatur voluptatibus debitis. Repellendus blanditiis eveniet totam dolore deleniti, repellat animi architecto necessitatibus saepe eum vitae porro!</p>
-<div class="milieu2">
 
+<div class="milieu2">
 <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt officiis inventore totam ea vero laborum!</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ad dolor eos cum vel est quia assumenda nihil aspernatur quos placeat reiciendis id excepturi veritatis ea, at sunt quo, voluptatibus veniam saepe odio. Sit, reprehenderit.</p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor perferendis magni excepturi quasi debitis similique sunt assumenda, itaque necessitatibus? Fugit quasi est doloribus illum possimus animi totam eveniet recusandae! Provident!</p>
 </div>
+</div>
 
 <footer class="bas2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam modi beatae, inventore ut cum quisquam dignissimos qui iure? Vero quam, neque, dicta maxime fuga est aliquid nesciunt placeat ad, error quisquam vitae distinctio esse et repellat. Voluptatem nobis, architecto corporis ut expedita temporibus iure exercitationem voluptas soluta repellendus. Ad, praesentium!</footer>
-
+</div>
 
 </body>
 </html>
