Ajout de l'exercice 3 et Mondrian

--- a/Exercice/4- Exercice_grid-flex/Exercice2/main.html
+++ b/Exercice/4- Exercice_grid-flex/Exercice2/main.html
@@ -91,7 +91,7 @@ h3 {
 
 .milieu2 {
     border-color: solid black 1px;
-    flex : 2;
+    flex : 3;
     border: 1px solid black;
     margin: 1%;
     padding: 2%;
@@ -106,8 +106,46 @@ h3 {
 }
 
 .marge_droite{
+    margin: 0% 25% 0% 0%; 
+}
+
+.marge_droite2{
     margin: 0% 50% 0% 0%; 
 
+}
+
+h4 {
+    background-color: rgba(202, 198, 198, 0.863);
+    text-align: center;
+    font-size: 20px;
+    padding: 2%;
+}
+
+.para_1{
+    color: white;
+    background-color: grey;
+    display: flex;
+    flex : 1;
+    margin: 1%;
+    padding: 2%;
+}
+
+
+.milieu3 {
+    border-color: solid black 1px;
+    flex : 3;
+    border: 1px solid black;
+    margin: 1%;
+    padding: 2%;
+}
+
+.para_3 {
+    color: white;
+    background-color: grey;
+    display: flex;
+    flex : 1;
+    margin: 1%;
+    padding: 2%;
 }
 
 </style>
@@ -150,6 +188,27 @@ h3 {
 
 <footer class="bas2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam modi beatae, inventore ut cum quisquam dignissimos qui iure? Vero quam, neque, dicta maxime fuga est aliquid nesciunt placeat ad, error quisquam vitae distinctio esse et repellat. Voluptatem nobis, architecto corporis ut expedita temporibus iure exercitationem voluptas soluta repellendus. Ad, praesentium!</footer>
 </div>
+
+
+<!-- Page 3 -->
+
+<div class="marge_droite2">
+    <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h4>
+
+<div class="para_1">
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae ipsum accusantium saepe doloremque minima eligendi excepturi cumque id maiores molestias beatae nisi numquam molestiae sit ullam sint, veniam dolor exercitationem ex quibusdam, impedit tenetur. Sint dolores dicta quia facere consequatur aliquid iste nam culpa aspernatur!</p>
+</div>
+<div class="milieu3">
+    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, obcaecati at aut nostrum quia ducimus.</h5>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ducimus soluta earum consequatur quisquam recusandae alias dolor ipsa cupiditate, sequi magnam aperiam qui nam consectetur blanditiis! Iste dignissimos modi eius.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet delectus id, natus cum temporibus tenetur iusto est nam, deleniti odio beatae repellendus possimus explicabo rerum adipisci aliquam tempore optio ipsum.</p>
+</div>
+<p class="para_3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore dignissimos maiores hic tenetur obcaecati, doloribus necessitatibus dicta sit numquam expedita accusantium minus laborum debitis ad esse ab impedit doloremque nulla molestias quod eos! Eveniet eos explicabo voluptate velit sed!</p>
+<footer class="bas"> Lorem ipsum dolor sit amet.</footer>
+
+
+</div>
+
 
 </body>
 </html>
